# Ruscii-Gen

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/ascii/: char_set.rs  converter.rs  error.rs  font_loader.rs  mod.rs
src/image_manip/: edge_detect.rs  edge_processor.rs  mod.rs  processing.rs  util.rs
