[package]
name = "ascii_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.28"
image = {version = "0.25.1", features = ["rayon"]}
imageproc = {version = "0.25.0", features = ["rayon"]}
ndarray = {version = "0.15.6", features = ["rayon"]}
num-traits = "0.2.19"
rayon = "1.10.0"